--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-12.21MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-983.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇭 瑞士-1.62MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇨🇦 加拿大-763.1KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
-  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-634.9KB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.87MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.72MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.66MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
