--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-634.9KB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.87MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.72MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 134.195.196.231, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.66MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇬🇧 英国-1.65MB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-171.2KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-5.27MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
+  - {name: 🇨🇳 中国-7.55MB/s(Youtube:不良林), server: tw6-5641.duuk.info, port: 5306, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw6-5641.duuk.info, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-888.2KB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇬🇧 英国-2.01MB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-634.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-171.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-888.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
