--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-13.26MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-1.61MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇰🇷 韩国-2.66MB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.01MB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.95MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 未知国家-362.5KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 未知国家-520.7KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: sfo1.nuker.biz, port: 443, type: vmess, uuid: 21370ba3-a7de-4aeb-b3f7-5b22f96d7453, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sfo1.nuker.biz}}
+  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇨🇳 中国-7.55MB/s(Youtube:不良林), server: tw6-5641.duuk.info, port: 5306, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw6-5641.duuk.info, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: 152.89.210.105, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 未知国家-2.16MB/s(Youtube:不良林), server: sfo1.nuker.biz, port: 443, type: vmess, uuid: 21370ba3-a7de-4aeb-b3f7-5b22f96d7453, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sfo1.nuker.biz}}
+  - {name: 🇨🇳 中国-9.16MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: usa002.369boy.com, port: 12001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa002.369boy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-750.2KB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15106, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇺🇸 美国-3.99MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-13.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.61MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 未知国家-362.5KB/s(Youtube:不良林)
-      - 未知国家-520.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-750.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
